--- a/gaj-data-analysis/research/MarkovModels/markov-model-notes.tex
+++ b/gaj-data-analysis/research/MarkovModels/markov-model-notes.tex
@@ -37,7 +37,7 @@
 \section{Random Sequence Processes}
 \label{sec:random-processes}
 Consider a random process $R$ that generates arbitrary-length sequences
-of the form $\vec{R}_N=(R_1,R_2,\ldots,R_N)$, where $N$ is a random variable governing
+of the form $\vec{R}=(R_1,R_2,\ldots,R_N)$, where $N$ is a random variable governing
 the length of a sequence, and $R_t$ is a random variable governing the value at {\em stage} $t$
 of the sequence. This sequence process is graphically depicted in Figure~\ref{fig:R-process}.
 \begin{figure}[hbt]
@@ -52,7 +52,7 @@ of the sequence. This sequence process is graphically depicted in Figure~\ref{fi
     \draw[->] (2) edge (t) ;
     \draw[->] (t) edge (n) ;
 \end{tikzpicture}
-\caption{\em A random process $R$ for generating sequences of arbitrary length $N$. The arrows indicate transitions from one stage in the sequence to the next.}
+\caption{\em A random process $R$ for generating sequences of random length $N$. The arrows indicate transitions from one stage in the sequence to the next.}
 \label{fig:R-process}
 \end{figure}
 
@@ -60,7 +60,7 @@ We assume that each $R_t$ randomly takes some discrete or continuous value $r_t\
 and hence the probability (or probability density) of observing a particular
 sequence $\vr$ of length $n=|\vr|$ is given by
 \begin{eqnarray}
-   p(\vec{R}_N\!=\!\vr) & = & p(N=n)\,p(R_1\!=\!r_1,\ldots,R_n\!=\!r_n\,|\,N=n)\,.
+   p(\vec{R}\!=\!\vr) & = & p(N=n)\,p(R_1\!=\!r_1,\ldots,R_n\!=\!r_n\,|\,N=n)\,.
 \end{eqnarray}
 In practice, this definition presupposes that we know we have observed a {\em complete} sequence that started
 at stage 1 and ended at stage $n$.
@@ -116,7 +116,7 @@ This augmented random process is depicted in Figure~\ref{fig:random-process}.
     \draw[->] (3) edge node [pos=0.5, above] {$\stackrel{\tau_4=0}{}$}  (t) ;
     \draw[->] (3) edge node [pos=0.5, below left] {$\stackrel{\tau_4=1}{}$} (tt) ;
 \end{tikzpicture}
-\caption{\em A random process for generating complete sequences of arbitrary length,
+\caption{\em A random process for generating complete sequences of random length,
 with explicit stages for sequence initiation and termination. Multiple arrows exiting from a node indicate
 different possible (mutually exclusive) stage transition pathways.}
 \label{fig:random-process}
@@ -167,8 +167,12 @@ with explicit stages for sequence initiation and termination, and explicit label
 \label{fig:simple-random-process}
 \end{figure}
 
-In general, we may handle both complete and partial sequences by letting $\ui$ denote the observed start-of-sequence symbol, and
-letting $\ut$ denote the observed end-of-sequence symbol; hence
+We can now handle both complete and partial sequences by introducing observed indicators $\ui$ and $\ut$
+to correspond to the start-of-sequence and end-of-sequence symbols, respectively.
+In particular, $\ui=1$ corresponds to `$\langle$' and $\ui=0$ corresponds to `$[$'; when the start of the sequence is unknown,
+we let $\ui=*$ (see Section~\ref{sec:missing-values}). Likewise, $\ut=1$ corresponds to `$\rangle$', $\ut=0$ corresponds to `$]$', and
+$\ut=*$ corresponds to unknown sequence termination.
+Hence, in general, we write
 \begin{eqnarray}
 p(\ui,\vr,\ut)
 & = & p(\iota_0\!=\!\ui,\tau_1\!=\!0,R_1\!=\!r_1,\ldots,\tau_n\!=\!0,R_n\!=\!r_n,\tau_{n+1}\!=\!\ut)
@@ -185,9 +189,9 @@ of aligning the observed values with the generated stages. This difficulty can b
 like the previous one.} 
 $\uvr=(\ur_1,\ldots,\ur_n)$, 
 is the possibility that some values were unobserved, i.e.\ arbitrarily {\em missing} or systematically {\em hidden}.
-For convenience, let $\ur_t=*$ denote the case where the  observed value of the $t$-th stage is missing.
-Likewise, let $\ui=*$ if we do not know whether or not we observed the start of the generated sequence,
-and let $\ut=*$ if we do not kow whether or not we observed the end of the generated sequence.
+For convenience, let $\ur_t=*$ denote the case where the  observed value of the $t$-th stage is missing,
+just like $\ui=*$ or $\ut=*$ if we do not kow whether or not we observed the start or end of the generated sequence,
+respectively.
 The `*' symbol is just a representational device -- its presence has no effect on the computed probabilities, other than to indicate that any associated variable should be marginalised out. Thus, for example:
 \begin{eqnarray}
 p(\vr) 
@@ -245,7 +249,8 @@ the explicit dependencies between various stages in the sequence. Such dependenc
 
 Despite not knowing these dependencies in advance, however, the basic form of the forward--backward algorithm can still be formulated.
 The first requirement is that the sequence process be {\em causal}, meaning that each stage of a sequence
-(including the termination stage but excluding the initiation stage) depends only on the preceding stages, and never on future stages.
+%(including the termination stage but excluding the initiation stage)
+ depends only on preceding stages, and never on future stages.
 This causality allows us to split a generated sequence into two parts at some arbitrary {\em pivot} stage $t$, as shown in Figure~\ref{fig:forwar-backard}. The second requirement is that the dependence on past stages can be limited
 in scope to some arbitrary {\em historical} stage $s$, as also shown.
 \begin{figure}[hbt]
@@ -283,29 +288,30 @@ in scope to some arbitrary {\em historical} stage $s$, as also shown.
 
 \end{tikzpicture}
 \caption{\em Causality allows the sequence to be partitioned at some pivot stage $t$, thereby dividing the sequence into past and future stages. Further
-limitation of past dependencies to some historical stage $s$ defines the active region for
+limitation of past dependencies to some historical stage $s$ defines the active window for
 one step of the forward--backward algorithm.}
 \label{fig:forwar-backard}
 \end{figure}
 
 Let us now define the sub-sequence $\vr_{s,t}=(r_s,r_{s+1},\ldots,r_t)$; by definition,
-$\vr_{s,t}=(\,)$ if $s>t$.
-Then observe, for a sufficiently long sequence, that
+$\vr_{s,t}=(\,)$ if $s>t$. Furthermore, define the concatenation operator `$\circ$', such that
+$\vr_{s,k}\circ\vr_{k+1,t}=\vr_{s,t}$.
+Then observe, for a sufficiently long sequence (defined in Section~\ref{sec:markov-processes}), that
 \begin{eqnarray}
 p(\ui,\uvr,\ut) 
 & = &
-p(\ui,\uvr_{1,s-1},\uvr_{s,t},\uvr_{t+1,n},\ut)
+p(\ui,\uvr_{1,s-1}\circ\uvr_{s,t}\circ\uvr_{t+1,n},\ut)
 \nonumber\\
 & = &
 \sum_{r_s\in{\cal R}} \delta(r_s\!=\!\ur_s)
 \cdots\sum_{r_t\in{\cal R}} \delta(r_t\!=\!\ur_t)
-\,p(\ui,\uvr_{1,s-1},\vr_{s,t},\uvr_{t+1,n},\ut)
+\,p(\ui,\uvr_{1,s-1}\circ\vr_{s,t}\circ\uvr_{t+1,n},\ut)
 \nonumber\\
 & = &
 \sum_{r_s\in{\cal R}} \delta(r_s\!=\!\ur_s)
 \cdots\sum_{r_t\in{\cal R}} \delta(r_t\!=\!\ur_t)
-\,p(\ui,\uvr_{1,s-1},\vr_{s,t})
-\,p(\uvr_{t+1,n},\ut\,|\,\ui,\uvr_{1,s-1},\vr_{s,t})
+\,p(\ui,\uvr_{1,s-1}\circ\vr_{s,t})
+\,p(\uvr_{t+1,n},\ut\,|\,\ui,\uvr_{1,s-1}\circ\vr_{s,t})
 \nonumber\\
 & = &
 \sum_{r_s\in{\cal R}} \delta(r_s\!=\!\ur_s)
@@ -314,21 +320,21 @@ p(\ui,\uvr_{1,s-1},\uvr_{s,t},\uvr_{t+1,n},\ut)
 \end{eqnarray}
 where
 \begin{eqnarray}
-\alpha_t(\vr_{s,t}) & = & p(\ui,\uvr_{1,s-1},\vr_{s,t})~=~p(\ui,\tau_1^-,\ur_1,\ldots,\tm_{s-1},\ur_{s-1},
+\alpha_t(\vr_{s,t}) & = & p(\ui,\uvr_{1,s-1}\circ\vr_{s,t})~=~p(\ui,\tau_1^-,\ur_1,\ldots,\tm_{s-1},\ur_{s-1},
 \tm_s,r_s,\ldots,\tm_t,r_t)
 \label{eq:fwd-pass-basic}
 \end{eqnarray}
 is the foward factor,
 and
 \begin{eqnarray}
-\beta_t(\vr_{s,t}) & = & p(\uvr_{t+1,n},\ut\,|\,\ui,\uvr_{1,s-1},\vr_{s,t})
+\beta_t(\vr_{s,t}) & = & p(\uvr_{t+1,n},\ut\,|\,\ui,\uvr_{1,s-1}\circ\vr_{s,t})
 \nonumber\\& = &
 p(\tm_{t+1},\ur_{t+1},\ldots,\tm_n,\ur_n,\ut\,|\,\ui,\tau_1^-,\ur_1,\ldots,\tm_{s-1},\ur_{s-1},
 \tm_s,r_s,\ldots,\tm_t,r_t)\
 \label{eq:bwd-pass-basic}
 \end{eqnarray}
 is the backward factor.
-The entire forward pass of the forward--backward algorithm starts from some historical stage $t_0$ and
+The entire forward pass of the forward--backward algorithm starts from some initial, historical stage $t_0$ and
 progressively computes $\alpha_t$ forward along the sequence for each applicable stage $t_0\le t\le n$. Likewise,
 the backward pass starts at termination stage, and computes $\beta_t$
 backwards along the sequence for each applicable stage $t_0\le t\le n$. The precise details of these calculations rely upon
@@ -409,41 +415,61 @@ p(\iota_0)
 \label{eq:temporal-model-full}
 \end{eqnarray}
 
-In practice, this full model is considerably simplified by dropping some or even most of the explicit (dashed) dependencies.
+In practice, this fully-dependent model is considerably simplified by dropping some or even most of the explicit (dashed) dependencies.
 For example, one might limit the 
 conditionality on past stages to a maximum of $m$ depenencies.
 This leads to the so-called {\em $m$-th order Markov model},
-given by
+shown in Figure~\ref{fig:markov-m}.
+\begin{figure}[hbt]
+\centering
+\begin{tikzpicture}[cnode/.style={draw,circle,minimum size=3.5em,inner sep=3pt}, onode/.style={fill=black!50, draw,circle,minimum size=1em}]
+    \node (0i) at (-0.7,0) [right] {$\stackrel{\iota_0^+}{}$};
+    \node[onode] (0) at (0,0) {};
+    \node[cnode] (1) at (2,0) {$R_1$};
+    \node[cnode] (2) at (4, 0)  {$R_2$};
+    \node (t) at (6, 0) {$\cdots$};
+    \node[cnode] (m) at (8, 0)  {$R_m$};
+    \node[cnode] (mp1) at (10, 0)  {$R_{m+1}$};
+    \node[cnode] (mp2) at (12, 0)  {$R_{m+2}$};
+    \node (t2) at (14, 0) {$\cdots$};
+
+    \draw[->] (0) edge node [pos=0.55, above] {$\stackrel{\tm_1}{}$}  (1) ;
+    \draw[->] (1) edge node [pos=0.5, above] {$\stackrel{\tm_2}{}$}  (2) ;
+    \draw[->] (2) edge node [pos=0.5, above] {$\stackrel{\tm_3}{}$}  (t) ;
+    \draw[->] (t) edge node [pos=0.5, above] {$\stackrel{\tm_m}{}$}  (m) ;
+    \draw[->] (m) edge node [pos=0.5, above] {$\stackrel{\tm_{m+1}}{}$}  (mp1) ;
+    \draw[->] (mp1) edge node [pos=0.5, above] {$\stackrel{\tm_{m+2}}{}$}  (mp2) ;
+    \draw[->] (mp2) edge node [pos=0.5, above] {}  (t2) ;
+
+   \begin{scope}[dashed]
+    \draw[->] (0) to[out=40,in=140] (2) ;
+    \draw[->] (0) to[out=45,in=135] (t) ;
+    \draw[->] (0) to[out=50,in=130] (m) ;
+    \draw[->] (1) to[out=40,in=140] (t) ;
+    \draw[->] (1) to[out=45,in=135] (m) ;
+    \draw[->] (1) to[out=50,in=130] (mp1) ;
+    \draw[->] (2) to[out=40,in=140] (m) ;
+    \draw[->] (2) to[out=45,in=135] (mp1) ;
+    \draw[->] (2) to[out=50,in=130] (mp2) ;
+    \draw[->] (t) to[out=40,in=140] (mp1) ;
+    \draw[->] (m) to[out=40,in=140] (mp2) ;
+   \end{scope}
+\end{tikzpicture}
+\caption{\em An $m$-th order Markov sequence process of arbitrary length (here $n\ge m+2$).}
+\label{fig:markov-m}
+\end{figure}
+The corresponding likelihood model is given by
 \begin{eqnarray}
 p(\iota_0,\vr,\tau_{n+1}) & = &
 p(\iota_0)
 \left\{\prod_{t=1}^{m}p(\tm_t,r_t\,|\,\iota_0,\vec{\tau}^-_{1,t-1},\vr_{1,t-1})\right\}
-\left\{\prod_{t=m+1}^{n}p(\tm_t,r_t\,|\,\vec{\tau}^-_{t-m,t-1},\vr_{t-m,t-1})\right\}
 \nonumber\\&&
-{}\times p_m^*(\tau_{n+1}\,|\,\iota_0,\vec{\tau}^-_{1,n},\vr_{1,n})
-\,,
-\label{eq:m-th-order}
+\left\{\prod_{t=m+1}^{n}p(\tm_t,r_t\,|\,\vec{\tau}^-_{t-m,t-1},\vr_{t-m,t-1})\right\}
+p(\tau_{n+1}\,|\,\vec{\tau}^-_{n-m+1,n},\vr_{n-m+1,n})\,,
+\label{eq:mth-order}
 \end{eqnarray}
-where
-\begin{eqnarray}
- p_m^*(\cdot\,|\,\iota_0,\vec{\tau}^-_{1,t},\vr_{1,t}) & = & \left\{\begin{array}{ll}
- p(\cdot\,|\,\iota_0,\vec{\tau}^-_{1,t},\vr_{1,t})\,, &
-\mbox{ for $t<m$}\,,
-\\
- p(\cdot\,|\,\vec{\tau}^-_{t-m+1,t},\vr_{t-m+1,t})\,, &
-\mbox{ for $t\ge m$}
-\end{array}\right.\,.
-\end{eqnarray}
-In the special case of $m=1$, the first-order Markov model,
-depicted in Figure~\ref{fig:simple-random-process}, takes on the especially-simple conditional form
-(assuming a non-empty sequence) of
-\begin{eqnarray}
-p(\iota_0,\vr,\tau_{n+1}) & = &
-p(\iota_0)\,p(\tm_1,r_1\,|\,\iota_0)
-\left\{\prod_{t=2}^{n}p(\tm_t,r_t\,|\,\tm_{t-1},r_{t-1})\right\}
-\,p(\tau_{n+1}\,|\,\tm_n,r_n)
-\,.
-\end{eqnarray}
+for $n\ge m$.
+
 An example from the realm of natural language understanding is the lexicographical analysis of the character
 sequences of words using bigrams (pairs of adjacent characters, corresponding to $m=1$), and trigrams 
 (triples of adjacent characters, corresponding to $m=2$), etc.
@@ -481,16 +507,28 @@ The second-order Markov sequence process, for example, is depicted in Figure~\re
     \draw[->] (Nm1) to[out=40,in=140] (tt) ;
    \end{scope}
 \end{tikzpicture}
-\caption{\em A 2nd-order Markov process for generating complete, random sequences of random length $N$.}
+\caption{\em A second-order Markov sequence process of random length $N$.}
 \label{fig:causal-process-2}
 \end{figure}
+
+In the special case of $m=1$, the first-order Markov model,
+depicted in Figure~\ref{fig:simple-random-process}, takes on the especially-simple conditional form
+ of
+\begin{eqnarray}
+p(\iota_0,\vr,\tau_{n+1}) & = &
+p(\iota_0)\,p(\tm_1,r_1\,|\,\iota_0)
+\left\{\prod_{t=2}^{n}p(\tm_t,r_t\,|\,\tm_{t-1},r_{t-1})\right\}
+\,p(\tau_{n+1}\,|\,\tm_n,r_n)
+\,,
+\end{eqnarray}
+for $n>0$.
 
 \subsection{Markov Forward--Backward Algorithm}
 \label{sec:forward-backward-markov}
 
 The basic description of the generic forward--backward algorithm in Section~\ref{sec:forward-backward-basic}
 can now be refined under the restriction of the causal sequence process to an $m$-th order Markov process.
-Specifically, we take the limiting historical stage to be $s=\max(1, t-m+1)$ for $t>0$ (i.e.\ non-empty sequences).
+Specifically, for any stage $1\le t\le n$, we take the limiting historical stage to be $s=\max(1, t-m+1)$.
 Then, for a sufficiently long sequence (i.e.\ $n\ge m$), the forward factor~\eqref{eq:fwd-pass-basic} may be
 computed for stages $t=m,m+1,\ldots,n$ via
 %\begin{eqnarray}
@@ -525,10 +563,10 @@ p(\iota_0)\left\{\prod_{i=1}^{m}p(\tm_i,r_i\,|\,\iota_0,\vec{\tau}^-_{1,i-1},\vr
 \left\{\prod_{i=m+1}^{t}p(\tm_i,r_i\,|\,\vec{\tau}^-_{i-m,i-1},\vr_{i-m,i-1})\right\}\,,
 \label{eq:fwd-pass-m}
 \end{eqnarray}
-from equation~\eqref{eq:m-th-order}. 
+from equation~\eqref{eq:mth-order}. 
 Furthermore, if $m\le t<n$ then we may simplify the forward pass by observing that
 \begin{eqnarray}
-\!\!\!\!\!
+\!\!\!\!\!\!\!
 \alpha_{t+1}(\vr_{t-m+2,t+1}) & = & 
 p(\ui,\tm_1,\ur_1,\ldots,\tm_{t-m+1},\ur_{t-m+1},\tm_{t-m+2},r_{t-m+2},\ldots,\tm_{t+1},r_{t+1})
 \nonumber\\& = &
@@ -544,7 +582,7 @@ p(\iota_0)\left\{\prod_{i=1}^{m}p(\tm_i,r_i\,|\,\iota_0,\vec{\tau}^-_{1,i-1},\vr
 \,p(\tm_{t+1},r_{t+1}\,|\,\vec{\tau}^-_{t-m+1,t},\vr_{t-m+1,t})\,.
 \label{eq:fwd-pass-m-recursive}
 \end{eqnarray}
-Effectively, this recursive relation comes from moving the size-$m$ active region (window) from stage $t$ to stage $t+1$ and thereby marginalising over the
+Effectively, this recursive relation comes from moving the size-$m$ active window from stage $t$ to stage $t+1$ and thereby marginalising over the
 observation $\ur_{t-m+1}$ that has now left the window.
 Note that for the special case of $m=1$, this forward pass reduces to
 \begin{eqnarray}
@@ -591,6 +629,8 @@ p(\tau_{n+1}\,|\,\vec{\tau}^-_{n-m+1,n},\vr_{n-m+1,n})
 p(\tm_{t},r_{t}\,|\,\vec{\tau}^-_{t-m,t-1},\vr_{t-m,t-1})\,\beta_{t}(\vr_{t-m+1,t})
 \,.
 \end{eqnarray}
+Effectively, moving the size-$m$ active window from stage $t$ to stage $t-1$ allows us to marginalise over the
+observation $\ur_{t}$ that has now left the window.
 For the special case of $m=1$, this backward pass reduces to
 \begin{eqnarray}
 \beta_n(r_n) & = &  \sum_{\tau_{n+1}=0}^{1}\delta(\tau_{n+1}\!=\!\ut)\,
@@ -602,9 +642,9 @@ p(\tm_{t+1},r_{t+1}\,|\,\tm_{t},r_{t})
 \,\beta_{t+1}(r_{t+1})\hspace*{2mm}\mbox{ for $t=n-1,\ldots,1$}
 \,.
 \end{eqnarray}
-Note that, in general, for a short sequence of length $n<m$ we must evaluate the observation likelihood~\eqref{eq:pr:discrete} directly using
-equation~\eqref{eq:m-th-order}. The forward--backward algorithm is of no help in such a case, since the active window overlaps
-both ends of the sequence, namely $\ui$ and $\ut$.
+Note that for a short sequence of length $n<m$ we must evaluate the observation likelihood~\eqref{eq:pr:discrete} directly using
+equation~\eqref{eq:mth-order}. The forward--backward algorithm is of no help in such a case, since the active window overlaps
+both ends of the sequence, namely $\ui$ and $\ut$, making the dependencies highly stage specific.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Stateful Markov Sequence Processes}
@@ -712,7 +752,7 @@ by replacing each node $R_t$ by the pair of nodes $S_t$ and $X_t$ with a depende
     \draw[->] (3x) to[out=-40,in=-140] (Nx) ;
    \end{scope}
 \end{tikzpicture}
-\caption{\em A fully-dependent, causal, stateful process for generating complete, random sequences of random length $N$ consisting of pairs of states and values.}
+\caption{\em A fully-dependent, causal, stateful process for generating complete, random sequences of random length $N$, consisting of pairs of states and values.}
 \label{fig:stateful-full}
 \end{figure}
 For convenience, we may notionally separate the states from the corresponding values at each stage by loosely defining
@@ -723,7 +763,7 @@ For convenience, we may notionally separate the states from the corresponding va
 \nonumber\\& \equiv & 
 (s_1,\ldots,s_n)\odot (x_1,\ldots,x_n)~=~(\vs,\vx)\,.
 \end{eqnarray}
-Hence, the joint likelihood of a fully-dependent state--value sequence is now derived from model~\eqref{eq:temporal-model-full} to be
+Hence, the joint likelihood of a fully-dependent state--value sequence is now derived from model~\eqref{eq:temporal-model-full} as
 \begin{eqnarray}
 p(\iota_0,\vs,\vx,\tau_{n+1}) & = &
 p(\iota_0,\tm_1,s_1,x_1,\tm_2,s_2,x_2,\ldots,\tm_n,s_n,x_n,\tau_{n+1})
@@ -737,10 +777,98 @@ p(\iota_0)
 \label{eq:stateful-model-full}
 \end{eqnarray}
 
-In practice, the dependence of $S_t$ and $X_t$ on $X_{t-1}$ (and further ancestral values) induces a regression model of some complexity,
+In practice, the dependence of $S_t$ and $X_t$ on $X_{t-1}$ (and further historical values) induces a regression model of some complexity,
 especially if the set ${\cal X}$ of values is continuous and/or multi-dimensional. Also, such a dependency causes difficulties handling missing values (see Section~\ref{sec:hidden-state}).
-Finally, as we discussed earlier, the general `spirit' of  stateful processes is that the state drives the value, not the other way around.
-Hence, common practice is to limit all dependencies to a maximum of $m$ previous {\em nodes}, as shown in Figure~\ref{fig:stateful-m}.
+Lastly, as we discussed earlier, the general `spirit' of  stateful processes is that the state drives the value, not the other way around.
+Hence, common practice is to limit the dependicies of $X_t$ to only  the current and previous states, as shown in Figure~\ref{fig:stateful-sub}.
+\begin{figure}[hbt]
+\centering
+\begin{tikzpicture}[cnode/.style={draw,circle,minimum size=3em,inner sep=3pt}, onode/.style={fill=black!50, draw,circle,minimum size=1em}]
+    \node (0i) at (-0.7,0) [right] {$\stackrel{\iota_0^+}{}$};
+    \node[onode] (0) at (0,0) {};
+    \node[cnode] (1) at (2,0) {$S_1$};
+    \node[cnode] (1x) at (2,-3) {$X_1$};
+    \node[cnode] (2) at (4, 0)  {$S_2$};
+    \node[cnode] (2x) at (4, -3)  {$X_2$};
+    \node[cnode] (3) at (6, 0)  {$S_3$};
+    \node[cnode] (3x) at (6, -3)  {$X_3$};
+    \node (t) at (8, 0) {$\cdots$};
+    \node (tx) at (8, -3) {$\cdots$};
+    \node[cnode] (N) at (10, 0)  {$S_N$};
+    \node[cnode] (Nx) at (10, -3)  {$X_N$};
+    \node[onode] (tt) at (12, 0) {};
+
+    \draw[->] (0) edge node [pos=0.55, above] {$\stackrel{\tm_1}{}$}  (1) ;
+    \draw[->] (1) edge node [pos=0.5, above] {$\stackrel{\tm_2}{}$}  (2) ;
+    \draw[->] (2) edge node [pos=0.5, above] {$\stackrel{\tm_3}{}$}  (3) ;
+    \draw[->] (3) edge node [pos=0.5, above] {$\stackrel{\tm_4}{}$}  (t) ;
+    \draw[->] (t) edge node [pos=0.5, above] {$\stackrel{\tm_N}{}$}  (N) ;
+    \draw[->] (N) edge node [pos=0.45, above] {$\stackrel{\tau^+_{N+1}}{}$} (tt) ;
+
+   \begin{scope}[dashed]
+    \draw[->] (0) to[out=40,in=140] (2) ;
+    \draw[->] (0) to[out=45,in=135] (3) ;
+    \draw[->] (0) to[out=50,in=130] (t) ;
+    \draw[->] (0) to[out=55,in=125] (N) ;
+    \draw[->] (0) to[out=60,in=120] (tt) ;
+    \draw[->] (1) to[out=40,in=140] (3) ;
+    \draw[->] (1) to[out=45,in=135] (t) ;
+    \draw[->] (1) to[out=50,in=130] (N) ;
+    \draw[->] (1) to[out=55,in=125] (tt) ;
+    \draw[->] (2) to[out=40,in=140] (t) ;
+    \draw[->] (2) to[out=45,in=135] (N) ;
+    \draw[->] (2) to[out=50,in=130] (tt) ;
+    \draw[->] (3) to[out=40,in=140] (N) ;
+    \draw[->] (3) to[out=45,in=135] (tt) ;
+   \end{scope}
+
+   \begin{scope}[dashed]
+    \draw[->] (0) to (1x) ;
+    \draw[->] (0) to (2x) ;
+    \draw[->] (0) to (3x) ;
+    \draw[->] (0) to (tx) ;
+    \draw[->] (0) to (Nx) ;
+
+    \draw[->] (1) to (1x) ;
+    \draw[->] (1) to (2x) ;
+    \draw[->] (1) to (3x) ;
+    \draw[->] (1) to (tx) ;
+    \draw[->] (1) to (Nx) ;
+    \draw[->] (2) to (2x) ;
+    \draw[->] (2) to (3x) ;
+    \draw[->] (2) to (tx) ;
+    \draw[->] (2) to (Nx) ;
+    \draw[->] (3) to (3x) ;
+    \draw[->] (3) to (tx) ;
+    \draw[->] (3) to (Nx) ;
+    \draw[->] (t) to (tx) ;
+    \draw[->] (t) to (Nx) ;
+    \draw[->] (N) to (Nx) ;
+   \end{scope}
+\end{tikzpicture}
+\caption{\em A partially-dependent, stateful process of random length $N$, with strong causal dependencies from
+states to values.}
+\label{fig:stateful-sub}
+\end{figure}
+The joint likelihood of a state--value sequence now reduces from the fully-dependent model~\eqref{eq:stateful-model-full}
+ to the  partially-dependent model
+\begin{eqnarray}
+p(\iota_0,\vs,\vx,\tau_{n+1}) & = &
+%p(\iota_0,\tm_1,s_1,x_1,\tm_2,s_2,x_2,\ldots,\tm_n,s_n,x_n,\tau_{n+1})
+%\nonumber\\
+%& = &
+p(\iota_0)
+\left\{\prod_{t=1}^{n}p(\tm_t,s_t\,|\,\iota_0,\vec{\tau}^-_{1,t-1},\vs_{1,t-1})\,p(x_t\,|\,\iota_0,\vec{\tau}^-_{1,t-1},\vs_{1,t})\right\}
+\nonumber\\&&{}\times
+ p(\tau_{n+1}\,|\,\iota_0,\vec{\tau}^-_{1,n},\vs_{1,n})
+\,.
+\label{eq:stateful-model-sub}
+\end{eqnarray}
+
+It is further common practice to restrict the state dependencies of the partially-dependent model 
+to a maximum of $m$ previous states (i.e.\ the states form an $m$-th order Markov sequence), 
+and to restrict the value dependencies to a maximum of $\ell$ states (past and present),
+as shown in Figure~\ref{fig:stateful-m-ell}.
 \begin{figure}[hbt]
 \centering
 \begin{tikzpicture}[cnode/.style={draw,circle,minimum size=3em,inner sep=3pt}, onode/.style={fill=black!50, draw,circle,minimum size=1em}]
@@ -753,7 +881,7 @@ Hence, common practice is to limit all dependencies to a maximum of $m$ previous
     \node[cnode] (3) at (6, 0)  {$S_3$};
     \node[cnode] (3x) at (6, -2)  {$X_3$};
     \node (t) at (8, 0) {$\cdots$};
-    \node (tx) at (8, -3) {$\cdots$};
+    \node (tx) at (8, -2) {$\cdots$};
     \node[cnode] (N) at (10, 0)  {$S_N$};
     \node[cnode] (Nx) at (10, -2)  {$X_N$};
     \node[onode] (tt) at (12, 0) {};
@@ -786,9 +914,13 @@ Hence, common practice is to limit all dependencies to a maximum of $m$ previous
    \end{scope}
 
 \end{tikzpicture}
-\caption{\em An example ($m=2$) of an $m$th-order stateful Markov process for generating complete, random sequences of random length $N$ consisting of pairs of states and values.}
-\label{fig:stateful-m}
+\caption{\em An example ($m=2, \ell=2$) of an order-$(m,\ell)$ stateful Markov process of random length $N$,
+ where state $S_t$ depends on (at most) $m$ previous states, and value $X_t$ depends upon $S_t$ and 
+(at most) $\ell-1$ previous states.}
+\label{fig:stateful-m-ell}
 \end{figure}
+The corresponding likelohood model of this order-$(m,\ell)$ state--value sequence process is ?????????????????????????????.
+
 
 **********************************************
 Consider the first-order Markov process $R$ depicted in Figure~\ref{fig:simple-random-process}.
